# Roskomnadzor-topic-modeling

./: .gitignore  README.md  pyproject.toml
roskomnadzor_lda/: main.ipynb  model.py  parser.py
roskomnadzor_lda/data/: checkpoint.pkl  result_13_06_2026_10_23.json  rkn_news_13_06_2026_13_54.json
roskomnadzor_lda/data/LDA_analys/: LDA_topics.json  doc_topic_distribution.json
