[tool.poetry]
name = "roskomnadzor-lda"
version = "0.1.0"
description = "We use Latent Dirichlet Allocation (LDA) for topic modeling of articles on the Roskomnadzor website."
authors = ["Alexander Klepikov <sklepikov2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.4.6"
scikit-learn = "^1.9.0"
bs4 = "^0.0.2"
aiohttp = "^3.14.1"
fake-useragent = "^2.2.0"
lxml = "^6.1.1"
pandas = "^3.0.3"
nltk = "^3.9.4"
pymorphy3 = "^2.0.6"
cloudscraper = "^1.2.71"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
